feat: add hikari connection pool

--- a/src/main/resources/hikaricp.properties
+++ b/src/main/resources/hikaricp.properties
@@ -2,4 +2,10 @@
 jdbcUrl=jdbc:postgresql://localhost:5432/photogram
 dataSource.user=postgres
 dataSource.password=pass
+connectionInitSql=SELECT 1
+maxLifetime=
+#schema=
+#transactionIsolation=
+#poolName=
+#maximumPoolSize=10
 
