feat: add ContactDao

--- a/src/main/resources/hikaricp.properties
+++ b/src/main/resources/hikaricp.properties
@@ -1,9 +1,9 @@
 
-jdbcUrl=jdbc:postgresql://localhost:5432/photogram
+jdbcUrl=jdbc:postgresql://localhost:5433/photogram
 dataSource.user=postgres
 dataSource.password=pass
 connectionInitSql=SELECT 1
-maxLifetime=
+#maxLifetime=
 #schema=
 #transactionIsolation=
 #poolName=
