refactor: resolve conversations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 
 
+app.post.image.width=1080
+app.post.image.height=1920
+
+image.output.format=JPEG
+image.output.quality=1.0
+
+
 app.root.file.path=D:\\photogram
 app.sharding.size=1
