feat: use custom db connection pool

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 
+db.url=jdbc:postgresql://localhost:5433/photogram
+db.user=postgres
+db.password=pass
+db.driver.name=org.postgresql.Driver
+db.pool.size=10
 
 app.post.image.width=1080
 app.post.image.height=1920
