--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,9 +4,14 @@
   xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
   http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" version="4.0">
 
-  
+
+  <error-page>
+    <exception-type>su.itpro.photogram.exception.auth.ForbiddenException</exception-type>
+    <location>/WEB-INF/jsp/error/forbidden.jsp</location>
+  </error-page>
+
   <error-page>
     <exception-type>java.lang.Throwable</exception-type>
-    <location>/WEB-INF/jsp/error/500.jsp</location>
+    <location>/WEB-INF/jsp/error/error.jsp</location>
   </error-page>
 </web-app>
