feat: add README.md

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,25 @@
 
-db.url=jdbc:postgresql://localhost:5433/photogram
-db.user=postgres
-db.password=pass
+# подключение к БД
+db.url=jdbc:postgresql://localhost:5432/photogram
+db.user=
+db.password=
 db.driver.name=org.postgresql.Driver
 db.pool.size=10
 
+# разрешение фотографий использующихся в системе
 app.post.image.width=1080
 app.post.image.height=1920
-
+# формат и качество
 image.output.format=jpg
 image.output.quality=1.0
 
+# изображения хранятся в файловом хранилище
+# путь к директории для сохранения пользовательских фотографий
+# например, для windows=D:\\photogram-upload  linux=/opt/photogram-upload
+app.root.file.path=
+app.sharding.size=0
 
-app.root.file.path=D:\\photogram
-app.sharding.size=1
-
+# настройки валидации параметров
 validation.length.phone.min=8
 validation.length.phone.max=13
 
@@ -26,4 +31,3 @@ validation.length.username.max=32
 
 validation.length.password.min=3
 validation.length.password.max=64
-
